syntax = "proto3";
package sixnft.nftmngr;

import "nftmngr/nft_attribute_value.proto";
option go_package = "sixnft/x/nftmngr/types";

message NftData {
  string nftSchemaCode = 1; 
  string tokenId = 2; 
  string tokenOwner = 3; 
  string originImage = 4; 
  repeated NftAttributeValue originAttributes = 5; 
  repeated NftAttributeValue onchainAttributes = 6; 
  
}

