syntax = "proto3";
package sixnft.nftmngr;

option go_package = "sixnft/x/nftmngr/types";

message OpenseaDisplayOption {
  
  string display_type = 1; 
  string trait_type = 2; 
  uint64 max_value = 3; 
}
