syntax = "proto3";
package sixnft.nftmngr;

option go_package = "sixnft/x/nftmngr/types";

message Status {
  
  bool first_mint_complete = 1; 
}
