syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v080;
import "nftmngr/v080/attribute_definition.proto";
import "nftmngr/v080/action.proto";
import "nftmngr/v080/nft_attribute_value.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v080";

message FlagStatus {
  string status_name = 1;
  bool status_value = 2;
}

message OnChainData {
  bool reveal_required = 1;
  bytes reveal_secret = 2;
  repeated AttributeDefinition nft_attributes = 3; 
  repeated AttributeDefinition token_attributes = 4; 
  repeated Action actions = 5; 
  repeated FlagStatus status = 6;
  repeated NftAttributeValue nft_attributes_value = 8;
}
