syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v092;
import "nftmngr/v092/display_option.proto";
import "nftmngr/v092/nft_attribute_value.proto";
import "nftmngr/v092/attribute_definition.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v092";

message SchemaAttribute {
  string nftSchemaCode = 1; 
  string name = 2; 
  string data_type = 3; 
  bool required = 4;
  string display_value_field = 5; 
  DisplayOption display_option = 6; 
  SchemaAttributeValue current_value = 7;
  bool hidden_overide = 8; // flag that allows action to override hidden
  bool hidden_to_marketplace = 9;
  string creator = 10;
}


message SchemaAttributeValue {
  oneof value {
    NumberAttributeValue number_attribute_value = 1;
    StringAttributeValue string_attribute_value = 2;
    BooleanAttributeValue boolean_attribute_value = 3;
    FloatAttributeValue float_attribute_value = 4;
  }
}